Getting it to render

--- a/packages/tooling/fast-figma-plugin-msft/manifest.json
+++ b/packages/tooling/fast-figma-plugin-msft/manifest.json
@@ -3,5 +3,8 @@
   "api": "1.0.0",
   "main": "./dist/main.js",
   "ui": "./dist/index.html",
-  "id": "796902094715412666"
+  "id": "796902094715412666",
+  "editorType": [
+    "figma"
+  ]
 }
