Starting to remove React

--- a/packages/tooling/fast-figma-plugin-msft/manifest.json
+++ b/packages/tooling/fast-figma-plugin-msft/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Theme Designer (Alpha)",
+  "name": "Fluent UI Design Tokens (Alpha)",
   "api": "1.0.0",
   "main": "./dist/main.js",
   "ui": "./dist/index.html",
