Migrated the design token evaluation to the UI side of the plugin since the new infrastructure requires the DOM.

--- a/packages/tooling/fast-figma-plugin-msft/tsconfig.json
+++ b/packages/tooling/fast-figma-plugin-msft/tsconfig.json
@@ -5,7 +5,11 @@
         "outDir": "./dist",
         "declaration": false,
         "jsx": "react",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "typeRoots": [
+            "../../../node_modules/@types",
+            "../../../node_modules/@figma"
+        ]
     },
     "include": [
         "src/**/*.ts",
